--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>배포 테스트!</h1>
+    <script src="./index.js"></script>
+    <h1>배포 테스트!!!</h1>
   </body>
 </html>
